--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                     <label for="cexampleInputPassword1">Confirm Password</label>
                     <input type="password" class="form-control" id="cexampleInputPassword1">
                   </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Create Account</button>
                 <button type="button" class="btn btn-secondary float-right" data-dismiss="modal">Close</button>
               </form>
         </div>
